# eeg_ica_learning

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: unit0_environment.ipynb  unit1_ica_intuition.ipynb  unit2_fastica_theory.ipynb  unit3_artifact_recognition.ipynb  unit4_mne_ica_practice.ipynb  unit5_full_pipeline.ipynb
notes/: unit2_cov.ipynb  unit2_kurtosis.ipynb  unit2_probability_distribution.ipynb  unit2_whitening.ipynb  unit2_高斯分布.ipynb  unit3_montage.ipynb  unit4_ica_colorbar.ipynb  unit4_pca_explained_variance.ipynb  unit5_pca_ica.ipynb  unit5_pca_ica_2.ipynb  unit5_variance.ipynb
paper/: report.ipynb  report.md
script/: gen_all.py
