[project]
name = "eeg-ica-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipyevents>=2.0.4",
    "ipympl>=0.10.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.9",
    "mne>=1.12.1",
    "mne-qt-browser>=0.7.4",
    "moabb>=1.5.0",
    "nibabel>=5.4.2",
    "pandas>=3.0.2",
    "pyqt6>=6.11.0",
    "python-picard>=0.8.2",
    "pyvista>=0.48.0",
    "pyvistaqt>=0.11.4",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "notebook>=7.5.5",
]
